--- a/speechd-api/src/c/clients/spdsend/.deps/client.Po
+++ b/speechd-api/src/c/clients/spdsend/.deps/client.Po
@@ -1,5 +1,5 @@
 client.o: client.c /usr/include/stdc-predef.h spdsend.h \
- /usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h /usr/include/stdio.h \
+ /usr/lib/gcc/i686-linux-gnu/5/include/stddef.h /usr/include/stdio.h \
  /usr/include/features.h /usr/include/i386-linux-gnu/sys/cdefs.h \
  /usr/include/i386-linux-gnu/bits/wordsize.h \
  /usr/include/i386-linux-gnu/gnu/stubs.h \
@@ -7,7 +7,7 @@ client.o: client.c /usr/include/stdc-predef.h spdsend.h \
  /usr/include/i386-linux-gnu/bits/types.h \
  /usr/include/i386-linux-gnu/bits/typesizes.h /usr/include/libio.h \
  /usr/include/_G_config.h /usr/include/wchar.h \
- /usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h \
+ /usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h \
  /usr/include/i386-linux-gnu/bits/stdio_lim.h \
  /usr/include/i386-linux-gnu/bits/sys_errlist.h \
  /usr/include/i386-linux-gnu/bits/stdio.h \
@@ -23,7 +23,7 @@ client.o: client.c /usr/include/stdc-predef.h spdsend.h \
 
 spdsend.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stddef.h:
 
 /usr/include/stdio.h:
 
@@ -47,7 +47,7 @@ spdsend.h:
 
 /usr/include/wchar.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h:
 
 /usr/include/i386-linux-gnu/bits/stdio_lim.h:
 
